[package]
name = "helloworld"
version = "0.1.0"
edition = "2021"

[lib]
name = "helloworld"
path = "src/user.rs"

[[bin]]
name = "helloworld"
path = "src/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.12"
serde = { version = "1.0" }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }